simplify CharRanges